2011-03-24  Rik Cabanier  <cabanier@adobe.com>

Reviewed by David Hyatt.

        REGRESSION (r81625): fast/css/percentage-non-integer.html fails on Windows
        https://bugs.webkit.org/show_bug.cgi?id=56829

        * platform/win/fast/css/percentage-non-integer-expected.checksum:
        * platform/win/fast/css/percentage-non-integer-expected.png:
        * platform/win/fast/css/percentage-non-integer-expected.txt:
2011-03-24  Rik Cabanier  <cabanier@adobe.com>

        Reviewed by David Hyatt.

        REGRESSION (r81625): fast/css/percentage-non-integer.html fails on Windows
        https://bugs.webkit.org/show_bug.cgi?id=56829

        Test: fast/css/percentage-non-integer.html

        * platform/Length.h:
        (WebCore::Length::calcValue):
        (WebCore::Length::calcMinValue):
        (WebCore::Length::calcFloatValue):

Canonical link: https://commits.webkit.org/71735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81925 268f45cc-cd09-0410-ab3c-d52691b4dbfc